add copy button and preview

--- a/web/src/components/Header/_styles.scss
+++ b/web/src/components/Header/_styles.scss
@@ -1,7 +1,7 @@
 .header {
   @apply shadow-lg max-w-7xl;
 
-  background-color: theme('colors.appBlack.200');
+  // background-color: theme('colors.appBlack.200');
   padding: 2ex;
   font-size: 1rem;
   border-radius: 1rem;
