--- a/web/src/components/Header/_styles.scss
+++ b/web/src/components/Header/_styles.scss
@@ -4,7 +4,7 @@
   // background-color: theme('colors.appBlack.200');
   padding: 2ex;
   font-size: 1rem;
-  border-radius: 1rem;
+  border-radius: 0 0 1rem 1rem;
   display: flex;
   align-items: center;
   margin: auto;
